--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "kpic.timer",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "start": "pm2 start server.js --name TIMER",
+    "restart": "pm2 restart TIMER",
+    "stop": "pm2 stop TIMER"
+  },
   "dependencies": {
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.7.1",
@@ -28,11 +34,6 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
